taanbus logo added

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,10 +3,11 @@
 
 <PageTitle>Inicio</PageTitle>
 
-<div class="img-container w-100">
+<div class="mb-5">
     <h2 class="text-center">T'aan bus <small class="text-muted">Hablar del camión</small></h2>
     <hr>
-    <img class="card-img-top rounded mx-auto d-block" src="\images\bus2.jpg" style="width: 40rem; height: auto;">
+    <img class="card-img-top rounded mx-auto d-block" src="\images\taanbus-logo.png"
+        style="width: 40rem; height: auto;">
 </div>
 
 <div class="d-flex justify-content-center mb-4">
@@ -15,7 +16,10 @@
             <div class="row align-items-start">
                 <div class="col">
                     <h4>¿Quiénes somos?</h4>
-                    <p> Somos un grupo de estudiantes que ha sido testigo durante de estos últimos años del deficiente servicio de transporte público presente en nuestra ciudad. Debido a esto, hemos desarrollado esta aplicación web con el objetivo de promover mejores servicios para  la comunidad y mejorar la calidad de vida de todos los ciudadanos.</p>
+                    <p> Somos un grupo de estudiantes que ha sido testigo durante de estos últimos años del deficiente
+                        servicio de transporte público presente en nuestra ciudad. Debido a esto, hemos desarrollado
+                        esta aplicación web con el objetivo de promover mejores servicios para la comunidad y mejorar la
+                        calidad de vida de todos los ciudadanos.</p>
                 </div>
             </div>
             <div class="container ">
