--- a/Shared/Nav.razor
+++ b/Shared/Nav.razor
@@ -1,11 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 4rem;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="\images\Utm_logo.png" style="width: 9rem; height: auto;"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02"
-      aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
+    @* <a class="navbar-brand" href="#"><img src="\images\Utm_logo.png" style="width: 9rem; height: auto;"></a> *@
+    <a class="navbar-brand" href="/"><img src="\images\taanbus-logo.png" style="width: 7rem; height: auto;"></a>
     <div class="d-flex justify-content-end" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
